cruzy-demo/force-app/main/default/objects/Add_On__c/Add_On__c.object-meta.xml
<CustomObject>
    <description>Add-on products and services attached to a cruise booking (excursions, insurance, upgrades, etc.).</description>
    <label>Add-On</label>
    <nameField>
        <label>Add-On Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Add-Ons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>