cruzy-demo/force-app/main/default/objects/Add_On__c/fields/Add_On_Type__c.field-meta.xml
<CustomField>
    <fullName>Add_On_Type__c</fullName>
    <label>Add-On Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value><fullName>Travel Insurance</fullName><default>false</default><label>Travel Insurance</label></value>
            <value><fullName>Shore Excursion</fullName><default>false</default><label>Shore Excursion</label></value>
            <value><fullName>Cabin Upgrade</fullName><default>false</default><label>Cabin Upgrade</label></value>
            <value><fullName>Drink Package</fullName><default>false</default><label>Drink Package</label></value>
            <value><fullName>Specialty Dining</fullName><default>false</default><label>Specialty Dining</label></value>
            <value><fullName>Transfer</fullName><default>false</default><label>Transfer</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>